--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\HKIIT\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\m\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
