History functionality, everything outputs to history

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,11 +26,13 @@ dist.jar=${dist.dir}/Refrigerator_Simulator_X.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.22-bin.jar=mysql-connector-java-5.1.22-bin.jar
+file.reference.mysql-connector-java-5.1.22-bin.jar-1=build\\mysql-connector-java-5.1.22-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
