--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.22-bin.jar=/Users/jmercouris/Source/Netbeans/Refrigerator-Sim-X/build/mysql-connector-java-5.1.22-bin.jar
-user.properties.file=C:\\Users\\m\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=/Users/jmercouris/Library/Application Support/NetBeans/7.2.1/build.properties
